--- a/ds_config.json
+++ b/ds_config.json
@@ -11,11 +11,24 @@
         "weight_decay": 0.01
       }
     },
-    "fp16": {
-      "enabled": true
-    },
+    
     "tensor_parallel": {
       "enabled": true,
       "tp_size": 2
+    },
+    "zero_optimization": {
+        "stage": 2,
+        "offload_optimizer": {
+        "device": "none"
+        },
+        "allgather_partitions": true,
+        "allgather_bucket_size": 2e8,
+        "reduce_scatter": true,
+        "reduce_bucket_size": 2e8,
+        "overlap_comm": true,
+        "contiguous_gradients": true
+    },
+    "fp16": {
+      "enabled": true
     }
   }
