--- a/ds_config.json
+++ b/ds_config.json
@@ -7,31 +7,23 @@
         "lr": 5e-5,
         "betas": [0.9, 0.999],
         "eps": 1e-8,
-        "weight_decay": "auto"
+        "weight_decay": 0.01
       }
     },
     "fp16": {
-      "enabled": "auto"
+      "enabled": true
     },
     "zero_optimization": {
       "stage": 2,
       "offload_optimizer": {
-        "device": "none"
+        "device": "cpu"
       },
       "allgather_partitions": true,
-      "reduce_scatter": true,
       "allgather_bucket_size": 2e8,
       "overlap_comm": true,
+      "reduce_scatter": true,
+      "reduce_bucket_size": 2e8,
       "contiguous_gradients": true
-    },
-    "aio": {
-      "block_size": 1048576,
-      "queue_depth": 8,
-      "single_submit": false,
-      "overlap_events": true,
-      "thread_count": 1
-    },
-    "steps_per_print": 100,
-    "wall_clock_breakdown": false
+    }
   }
   
