--- a/ds_config.json
+++ b/ds_config.json
@@ -7,7 +7,7 @@
         "lr": 5e-5,
         "betas": [0.9, 0.999],
         "eps": 1e-8,
-        "weight_decay": 0.01
+        "weight_decay": "auto"
       }
     },
     "fp16": {
