debug tensor parall

--- a/ds_config.json
+++ b/ds_config.json
@@ -16,7 +16,7 @@
     "zero_optimization": {
       "stage": 2,
       "offload_optimizer": {
-        "device": "cpu"
+        "device": "none"
       },
       "allgather_partitions": true,
       "allgather_bucket_size": 2e8,
