--- a/ds_config.json
+++ b/ds_config.json
@@ -1,23 +1,36 @@
 {
-    "train_batch_size": "auto",
-    "train_micro_batch_size_per_gpu": "auto",
-    "gradient_accumulation_steps": "auto",
-    "gradient_clipping": 1.0,
+    "train_batch_size": 8,
+    "train_micro_batch_size_per_gpu": 1,
+    "gradient_accumulation_steps": 4,
+  
     "zero_optimization": {
       "stage": 2,
       "offload_optimizer": {
-        "device": "none"
-      },
-      "offload_param": {
-        "device": "none"
+        "device": "cpu",
+        "pin_memory": true
       },
       "overlap_comm": true,
       "contiguous_gradients": true
     },
-    "fp16": {
-      "enabled": true
+  
+    "bf16": {
+      "enabled": false
     },
-    "steps_per_print": 100,
+    "fp16": {
+      "enabled": true,
+      "loss_scale": 0,
+      "loss_scale_window": 100,
+      "hysteresis": 2,
+      "min_loss_scale": 1
+    },
+  
+    "activation_checkpointing": {
+      "partition_activations": true,
+      "cpu_checkpointing": false,
+      "contiguous_memory_optimization": true
+    },
+  
+    "gradient_clipping": 1.0,
     "wall_clock_breakdown": false
   }
   
