--- a/ds_config.json
+++ b/ds_config.json
@@ -1,7 +1,7 @@
 {
   "train_batch_size": "auto",
   "train_micro_batch_size_per_gpu": 1,
-  "gradient_accumulation_steps": 16,
+  "gradient_accumulation_steps": "auto",
   
   "zero_optimization": {
       "stage": 3,
