--- a/ds_config.json
+++ b/ds_config.json
@@ -1,6 +1,6 @@
 {
   "train_batch_size": "auto",
-  "train_micro_batch_size_per_gpu": 1,
+  "train_micro_batch_size_per_gpu": "auto",
   "gradient_accumulation_steps": "auto",
   
   "zero_optimization": {
