--- a/ds_config.json
+++ b/ds_config.json
@@ -23,11 +23,16 @@
   },
   
   "flops_profiler": {
-      "enabled": true,
-      "profile_step": 10,
-      "module_depth": -1
-    },
+    "enabled": false,  
+    "profile_step": -1,
+    "module_depth": -1
+  },
   "gradient_clipping": 1.0,
   "steps_per_print": 50,
-  "wall_clock_breakdown": false
+  "wall_clock_breakdown": false,
+
+  "tensor_parallel": {
+    "enabled": true,
+    "tp_size": 2
+  }
 }
