implement tensor parall on deepspeed

--- a/ds_config.json
+++ b/ds_config.json
@@ -29,6 +29,5 @@
   },
   "gradient_clipping": 1.0,
   "steps_per_print": 50,
-  "wall_clock_breakdown": false,
-
+  "wall_clock_breakdown": false
 }
